--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,17 @@
 
 <body>
   <p>Welcome to the jungle</p>
+
+  <script type="text/javascript" src="/socket.io/socket.io.js"> </script>
+  <script type="text/javascript">
+    var socket = io();
+    socket.on('connect', () => {
+      console.log('Connected to server');
+    });
+    socket.on('disconnect', () => {
+      console.log('Disconnected from server');
+    });
+  </script>
 </body>
 
 </html>
