--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,16 @@
 <body>
   <p>Welcome to the jungle</p>
 
+  <ol id="messages"></ol>
+
+  <form id="message-form">
+    <input name="message" type="text" placeholder="Message"/>
+    <button> Send</button>
+  </form>
+
+
   <script type="text/javascript" src="/socket.io/socket.io.js"> </script>
+  <script type="text/javascript" src="/js/libs/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="/js/index.js"> </script>
 </body>
 
