--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Join | ChatApp</title>
-    <meta name="viewport" content="sidth=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body class="centered-form">
     <div class="centered-form__form">
-      <form class="" action="/chat.html" method="post">
+      <form action="/chat.html">
         <div class="form-field">
           <h3>Join now </h3>
         </div>
@@ -21,7 +21,7 @@
           <input type="text" name="room">
         </div>
         <div class="form-field">
-          <button type="button" name="button"> Join </button>
+          <button> Join </button>
         </div>
       </form>
     </div>
